--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ language: python
 python:
   - "2.7"
 
+install:
+  - pwd
+  - pip install coveralls
+
 script:
   - py.test
+
+after_success:
+   - coveralls
