Add nosetests to travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ python:
 install:
   - pwd
   - pip install coveralls
+  - pip install nose
 
 script:
   - py.test
+  - nosetests
 
 after_success:
    - coveralls
