--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ python:
 
 install:
   - pwd
+  - pip install coverage
   - pip install coveralls
+  - pip install -r requirements.txt
 
 script:
-  - py.test
+  - coverage run --source=hdmi -m py.test -s
 
 after_success:
    - coveralls
