--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - coverage run --source=hdmi -m py.test -s
+  - coverage run --source=riscv -m py.test -s
 
 after_success:
    - coveralls
